--- a/setup.cfg
+++ b/setup.cfg
@@ -49,7 +49,14 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
-
+    openai
+    streamlit
+    pandas 
+    numpy
+    streamlit-aggrid
+    pydantic
+    sklearn
+    tqdm
 
 [options.packages.find]
 where = src
