fix sklearn dependency name

--- a/setup.cfg
+++ b/setup.cfg
@@ -55,7 +55,7 @@ install_requires =
     numpy
     streamlit-aggrid
     pydantic
-    sklearn
+    scikit-learn
     tqdm
 
 [options.packages.find]
