add main topic promts and tags, update aggrid version

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,7 +53,7 @@ install_requires =
     streamlit
     pandas 
     numpy
-    streamlit-aggrid
+    streamlit-aggrid==0.2.3
     pydantic
     scikit-learn
     tqdm
