--- a/service/memory_streamlit.service
+++ b/service/memory_streamlit.service
@@ -4,9 +4,9 @@ After=network.target
 
 [Service]
 Type=simple
-ExecStart=/opt/shichenh/miniconda3/envs/gpt_translate/bin/python run -m streamlit run app_aggrid.py
+ExecStart=/opt/shichenh/miniconda3/envs/gpt_translate/bin/python -m streamlit run app_aggrid.py --server.port 8501
 WorkingDirectory=/opt/shichenh/gpt_translate/src/streamlit_app
-User=shichenh
+EnvironmentFile=/opt/shichenh/gpt_translate/service/memory.env
 
 [Install]
 WantedBy=default.target
