--- a/setup.cfg
+++ b/setup.cfg
@@ -62,6 +62,10 @@ install_requires =
     pydub
     beautifulsoup4
     selenium
+    chromadb
+    plotly
+    nbformat
+    umap-learn
 
 [options.packages.find]
 where = src
