add using new audio output

--- a/src/makefile
+++ b/src/makefile
@@ -1,2 +1,5 @@
 python tts_update.py --config /opt/shichenh/gpt_translate/src/gpt_translate/crawl/tts_config.yaml
 python -m streamlit run audio_app.py --server.port 8505
+
+# sudo systemctl restart audio_streamlit.service
+systemctl --user restart audio_streamlit.service
