--- a/setup.cfg
+++ b/setup.cfg
@@ -51,8 +51,8 @@ install_requires =
     importlib-metadata; python_version<"3.8"
     openai
     streamlit
-    pandas 
-    numpy
+    pandas==1.5.3
+    numpy==1.23.5
     streamlit-aggrid==0.2.3
     pydantic
     scikit-learn
@@ -66,6 +66,8 @@ install_requires =
     plotly
     nbformat
     umap-learn
+    faiss-cpu
+    ipykernel
 
 [options.packages.find]
 where = src
